--- a/main.css
+++ b/main.css
@@ -5,10 +5,70 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 body{
+   /* display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;*/
+
+}
+nav{
+    justify-content: center;
+    align-items: center;
+    max-height: 100vh;
+}
+footer{
+    justify-content: center;
+    align-items: center;
+    max-height: 100vh;
+}
+/*Menu de pesquisa*****/
+.menuContainer{
+    width: 300px;
+    padding: 15px 0px;
+    border: 1px solid blueviolet;
+
+}
+.menuContainer li a{
+    padding: 12px;
+    text-decoration: none;
+    color:black;
+    display: block;
+   backface-visibility: hidden;
+        
+}
+#menu li a{
+    padding: 12px;
+    text-decoration: none;
+    display: block;
+}
+#menu li a:hover{
+    background-color: rgb(179, 149, 207);
+}
+
+.menuContainer .pesquisar{
+    padding-left: 10px;
+}
+
+
+#pesquisa{
+    width: 95%;
+    font-size: 18px;
+    padding:11px;
+    border: 1px solid  blueviolet;
+}
+
+#menu{
+    list-style: none;
+    padding: 0px;
+    margin: 0px;
+}
+
+/**********************/
+section{
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    max-height: 100vh;
 
 }
 
@@ -86,3 +146,31 @@ body{
     color:black;
     background-color: white;
   }
+
+  footer{
+    justify-items: center;
+    align-items: center;
+  }
+
+.identificacao{
+    display: flex;
+    text-decoration: none;
+    text-align: end;
+    padding: 50px;
+    list-style: none;
+    
+}
+
+.identificacao li a{
+    text-decoration: none;
+    padding: 15px;
+    color: blueviolet;
+    display: block;
+    list-style: none;
+    
+}
+.pesquise{
+    margin:10px;
+    padding: 10px;
+    content: 10px;
+}
