--- a/main.css
+++ b/main.css
@@ -11,11 +11,32 @@ body{
     min-height: 100vh;*/
 
 }
+
+header {
+    background: grey;
+}
+
+.logo {
+    width: 250px;
+}
+
+.absolute {
+    position: absolute;
+    right: 0;
+    top: 30px;
+}
+
 nav{
     justify-content: center;
     align-items: center;
     max-height: 100vh;
 }
+
+.banner {
+    width: 100%;
+    height: 700px;
+}
+
 footer{
     justify-content: center;
     align-items: center;
@@ -70,6 +91,13 @@ section{
     align-items: center;
     max-height: 100vh;
 
+}
+
+.subtitulo {
+text-align: center;
+font-size: 18px;
+margin: 20px 0 20px 0;
+color: blueviolet;
 }
 
 .container{
@@ -147,10 +175,33 @@ section{
     background-color: white;
   }
 
-  footer{
+footer{
     justify-items: center;
     align-items: center;
-  }
+    text-align: center;
+    margin-top: 50px;
+    padding: auto 0 80px 0;
+    background-color: grey;
+}
+
+.menurodape {
+    display: flex;
+    text-decoration: none;
+    text-align: end;
+    list-style: none; 
+}
+
+.menurodape li a {
+    text-decoration: none;
+    padding: 15px;
+    color: blueviolet;
+    display: block;
+    list-style: none;
+}
+
+.menurodape img {
+    width: 25px;
+}
 
 .identificacao{
     display: flex;
