--- a/main.css
+++ b/main.css
@@ -24,6 +24,8 @@ header {
     position: absolute;
     right: 0;
     top: 30px;
+    font-size: large;
+    font-weight: bold;
 }
 
 nav{
@@ -46,7 +48,8 @@ footer{
 .menuContainer{
     width: 300px;
     padding: 15px 0px;
-    border: 1px solid blueviolet;
+    /*border: 1px solid blueviolet;*/
+    
 
 }
 .menuContainer li a{
@@ -224,4 +227,11 @@ footer{
     margin:10px;
     padding: 10px;
     content: 10px;
+}
+
+.container .content .card .forte{
+    font-style: italic;
+    font-weight: bold;
+    color:blueviolet;
+    
 }
